2012-08-12  Jan Nijtmans <nijtmans@users.sf.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
	* win/rules.vc: Remove some unused code, always set
	USE_THREAD_ALLOC in combination with TCL_THREADS
	

2010-08-03  Stuart Cassoff  <stwo@users.sourceforge.net>

	* ChangeLog:		Zap trailing whitespace.
	* README.sha:		No functional change.
	* win/nmakehlp.c:
	* Makefile.in:		DON'T use gnu tar; use normal tar.

2010-08-02  Stuart Cassoff  <stwo@users.sourceforge.net>

	* README.sha:		Zap trailing whitespace.
	* doc/sha1.n:		No functional change.
	* generic/sample.c:
	* generic/tclsample.c:
	* license.terms:
	* win/makefile.vc:
	* ChangeLog:		Fix wrong date in previous ChangeLog entry.

2010-08-01  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in:	Tidy: Whitespace, formatting, spelling.
	* configure.in:	No functional change.

2012-08-01  Jan Nijtmans <nijtmans@users.sf.net>

	* win/makefile.vc: Sync with latest Tcl 8.6 updates
	* win/rules.vc:
	* win/pkg.vc:

2012-02-27  Jan Nijtmans <nijtmans@users.sf.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
	* <all>:        Purge RCS keywords.

2010-12-15  Stuart Cassoff  <stwo@users.sourceforge.net>

	* configure.in:	Upgrade to newer install-sh and use it.
	* Makefile.in:
	* configure:	Regenerated to use latest TEA tcl.m4.

2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
			Better building on OpenBSD.

2010-12-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in: Make .SUFFIXES work for more (BSD) make programs.

2010-12-14  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.
	This adds cross-compile support to UNIX and Win, and
	support for building 64-bit executables with mingw-w64
	build tools.

2010-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (valgrind): add valgrind sample targets

2010-08-16  Jeff Hobbs  <jeffh@ActiveState.com>
